--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,8 @@ name: CI/CD
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
@@ -12,8 +13,8 @@ jobs:
       - name: Code checkout
         uses: actions/checkout@v3
 
-      - name: Install Dependency
-        uses: npm install
+      - name: Install Dependencies
+        run: npm install
 
       - name: Run tests
-        uses: npm run test
+        run: npm run test
